@@ -54,6 +54,7 @@ apply_pattern declare_scripts files="\
  checkTP.py \
  checkTag.py \
  cmtClients.py \
+ diff-athfile \
  diff-jobo-cfg.py \
  diffConfigs.py \
  diffPoolFiles.py \
